--- a/src/templates/landing/common/_header.html
+++ b/src/templates/landing/common/_header.html
@@ -211,13 +211,13 @@
                             {% if company.privacy_policy and not company.protection_data_policy and company.cookies_policy %}
                             Acepto las
                             <a target="_blank" href="{{company.privacy_policy.url}}">Políticas de Privacidad</a>
-                            y <a target="_blank" href="{{company.cookies_policy}}">Cookies.</a>
+                            y <a target="_blank" href="{{company.cookies_policy.url}}">Cookies.</a>
                             {% endif %}
                             {% if company.privacy_policy and company.protection_data_policy and company.cookies_policy %}
                             Acepto las
                             <a target="_blank" href="{{company.privacy_policy.url}}">Políticas de Privacidad</a>
                             , <a target="_blank" href="{{company.protection_data_policy.url}}">Protección de Datos Personales</a>
-                            y <a target="_blank" href="{{company.cookies_policy}}">Cookies.</a>
+                            y <a target="_blank" href="{{company.cookies_policy.url}}">Cookies.</a>
                             {% endif %}
                             {% if not company.privacy_policy and company.protection_data_policy and not company.cookies_policy %}
                             Acepto la
@@ -226,11 +226,11 @@
                             {% if not company.privacy_policy and company.protection_data_policy and company.cookies_policy %}
                             Acepto la
                             <a target="_blank" href="{{company.protection_data_policy.url}}">Protección de Datos Personales</a>
-                            y <a target="_blank" href="{{company.cookies_policy}}">Cookies.</a>
+                            y <a target="_blank" href="{{company.cookies_policy.url}}">Cookies.</a>
                             {% endif %}
                             {% if not company.privacy_policy and not company.protection_data_policy and company.cookies_policy %}
                             Acepto las
-                            <a target="_blank" href="{{company.cookies_policy}}">Cookies.</a>
+                            <a target="_blank" href="{{company.cookies_policy.url}}">Cookies.</a>
                             {% endif %}
                         </label>
 				    </div>
