--- a/src/templates/landing/credencial-generada.html
+++ b/src/templates/landing/credencial-generada.html
@@ -13,8 +13,8 @@
     <div class="grilla ">
         <div class="b10Wrap f aifs jcc">
             <div class="b10Left scrollItem">
-                <h3 class="gTitle">Ya eres parte del evento "{{credential_settings.title_credential}}". </h3>
-                <label for="" class="gParrafo">Comparte la credencial en tus redes y etiquetanos como #elpoderdeladata.</label>
+                <h3 class="gTitle">{{credential_settings.first_text_message}} </h3>
+                <label for="" class="gParrafo">{{credential_settings.second_text_message}}</label>
                 <div class="b10Links f aic jcfs">
                     <a class="b10DownloadCredencial" href="{% url 'landing:download_credential' instance.code%}">Descargar credencial <img src="/static/web/img/download.svg" alt="" width="22"></a>
                     <a href="{% url 'landing:event' %}" class="b10VerEvento">Ver evento</a>
@@ -26,7 +26,7 @@
                     <img src="{{credential_settings.image_credential.url}}" width="1920" height="713"  alt="Myimage">
                 </figure>
                 <div class="b10ContentInfo">
-                    <h5>{{credential_settings.title_credential}}</h5>
+                    <h5>{{credential_settings.title_credential|default:""}}</h5>
                     <!-- en data-image-default ira la imagen por defecto cuando no suben una imagen propia -->
                     <!-- Este data se usara para validar cuando suben una imagen y quieren cancelar para asì 
                         poder recuperar la imagen por default -->
