--- a/src/templates/landing/home.html
+++ b/src/templates/landing/home.html
@@ -519,7 +519,16 @@
 {% endblock %}
 
 {% block jsfinal %}
+<script src="https://www.google.com/recaptcha/api.js?render={{recaptcha_site_key}}"></script>
 <script src="/static/web/js/swiper/swiper-bundle.min.js"></script>
+<script>
+    grecaptcha.ready(function() {
+      grecaptcha.execute('{{recaptcha_site_key}}', {action: "/"}).then(function(token) {
+        document.getElementById('g-recaptcha-response').value = token;
+        document.getElementById('g-recaptcha-response_login').value = token;
+      });
+    });
+</script>
 <script type="text/javascript">
     if(document.getElementsByClassName("b3")[0]){
         eventGrilla("b3Left","left")
