--- a/src/templates/landing/home.html
+++ b/src/templates/landing/home.html
@@ -519,11 +519,12 @@
 {% endblock %}
 
 {% block jsfinal %}
+<script src="https://www.google.com/recaptcha/api.js"></script>
 <script src="https://www.google.com/recaptcha/api.js?render={{recaptcha_site_key}}"></script>
 <script src="/static/web/js/swiper/swiper-bundle.min.js"></script>
 <script>
     grecaptcha.ready(function() {
-      grecaptcha.execute('{{recaptcha_site_key}}', {action: "/"}).then(function(token) {
+      grecaptcha.execute('{{recaptcha_site_key}}', {action: "/login/"}).then(function(token) {
         document.getElementById('g-recaptcha-response').value = token;
         document.getElementById('g-recaptcha-response_login').value = token;
       });
