--- a/src/templates/landing/home.html
+++ b/src/templates/landing/home.html
@@ -523,12 +523,14 @@
 <script src="https://www.google.com/recaptcha/api.js?render={{recaptcha_site_key}}"></script>
 <script src="/static/web/js/swiper/swiper-bundle.min.js"></script>
 <script>
-    grecaptcha.ready(function() {
-      grecaptcha.execute('{{recaptcha_site_key}}', {action: "/login/"}).then(function(token) {
-        document.getElementById('g-recaptcha-response').value = token;
-        document.getElementById('g-recaptcha-response_login').value = token;
-      });
-    });
+    setTimeout(()=>{
+        grecaptcha.ready(function() {
+            grecaptcha.execute('{{recaptcha_site_key}}', {action: "/login/"}).then(function(token) {
+              document.getElementById('g-recaptcha-response').value = token;
+              document.getElementById('g-recaptcha-response_login').value = token;
+            });
+          });
+    },1000)
 </script>
 <script type="text/javascript">
     if(document.getElementsByClassName("b3")[0]){
