--- a/src/templates/landing/common/_base.html
+++ b/src/templates/landing/common/_base.html
@@ -33,6 +33,7 @@
     </div>
     <!-- <a href="#" class="openSidebarMobile icon-menu"></a> -->
     <!-- <div class="sidebarContentMobile"></div> -->
+    <script src="https://www.google.com/recaptcha/api.js?render={{recaptcha_site_key}}"></script>
     <script src="/static/web/js/jquery-3.2.1.min.js" type="text/javascript"></script>
     <script src="/static/web/js/main.js" type="text/javascript"></script>
     <script src="/static/web/js/validationform/jquery.validationEngine.js"></script>
