--- a/src/templates/landing/common/_header.html
+++ b/src/templates/landing/common/_header.html
@@ -88,7 +88,7 @@
     <a href="#" class="g8ClosePopup icon-close pa closeIniciaSesion"></a>
     <h3>Iniciar Sesión</h3>
     <div class="g8Confirm fdc aifs login-warning-form" style="display:none;">
-        <div class="g8Bottom gParrafo">
+        <div class="g8Bottom gParrafo login-message-warning">
         </div>
         <div class="g8Bottom">
             <a class="return-login-form" href="#"><- Regresar</a>
