--- a/src/templates/landing/common/_base.html
+++ b/src/templates/landing/common/_base.html
@@ -33,7 +33,6 @@
     </div>
     <!-- <a href="#" class="openSidebarMobile icon-menu"></a> -->
     <!-- <div class="sidebarContentMobile"></div> -->
-    <script src="https://www.google.com/recaptcha/api.js?render={{recaptcha_site_key}}"></script>
     <script src="/static/web/js/jquery-3.2.1.min.js" type="text/javascript"></script>
     <script src="/static/web/js/main.js" type="text/javascript"></script>
     <script src="/static/web/js/validationform/jquery.validationEngine.js"></script>
@@ -41,6 +40,15 @@
     <!-- JSADD START -->
     {% block jsfinal %}{% endblock %}
     <!-- JSADD END -->
+    <script src="https://www.google.com/recaptcha/api.js?render={{recaptcha_site_key}}"></script>
+    <script>
+            grecaptcha.ready(function() {
+                grecaptcha.execute('{{recaptcha_site_key}}', {action: "/"}).then(function(token) {
+                    document.getElementById('g-recaptcha-response').value = token;
+                    document.getElementById('g-recaptcha-response_login').value = token;
+                });
+            });
+    </script>
     <script>
         'use strict';
         var register_data = "";
@@ -106,7 +114,6 @@
                             type : "post",
                             data: register_data,
                         }).done(function(data) {
-                            console.log(data, 'DATA RESPONSE')
                             if(data.success){
                                 $('.parrafo-register').show();
                                 $('.warning-form').hide();
