--- a/src/templates/landing/home.html
+++ b/src/templates/landing/home.html
@@ -519,16 +519,27 @@
 {% endblock %}
 
 {% block jsfinal %}
-{% comment %} <script src="https://www.google.com/recaptcha/api.js?render={{recaptcha_site_key}}"></script>
+<script src="https://www.google.com/recaptcha/api.js?render={{recaptcha_site_key}}"></script>
+
 <script src="/static/web/js/swiper/swiper-bundle.min.js"></script>
 <script>
         grecaptcha.ready(function() {
             grecaptcha.execute('{{recaptcha_site_key}}', {action: "/"}).then(function(token) {
-              document.getElementById('g-recaptcha-response').value = token;
-              document.getElementById('g-recaptcha-response_login').value = token;
+                document.getElementById('g-recaptcha-response').value = token;
+                document.getElementById('g-recaptcha-response_login').value = token;
             });
-          });
-</script> {% endcomment %}
+        });
+</script>
+<script>
+    function onClick(e) {
+      e.preventDefault();
+      grecaptcha.ready(function() {
+        grecaptcha.execute('{{recaptcha_site_key}}', {action: 'submit'}).then(function(token) {
+            // Add your logic to submit to your backend server here.
+        });
+      });
+    }
+</script>
 <script type="text/javascript">
     if(document.getElementsByClassName("b3")[0]){
         eventGrilla("b3Left","left")
