--- a/src/templates/landing/common/_header.html
+++ b/src/templates/landing/common/_header.html
@@ -197,51 +197,48 @@
             </div>
             <div class="g8Confirm fdc aifs">
                 <p>(*) Campos obligatorios</p>
-                {% if company.privacy_policy or company.protection_data_policy or company.cookies_policy %}
+                {% if company.privacy_policy or company.protection_data_policy or company.terms_and_conditions %}
                     <div class="g8Checkbox">
                         <input id="check1" type="checkbox" checked class="validate[required]" name="checkbox1" value="checkbox1">
                         <label for="check1">
-                            {% if company.privacy_policy and not company.protection_data_policy and not company.cookies_policy %}
+                            {% if company.privacy_policy and not company.protection_data_policy and not company.terms_and_conditions %}
                             Acepto las
                             <a target="_blank" href="{{company.privacy_policy.url}}">Políticas de Privacidad</a>
                             {% endif %}
-                            {% if company.privacy_policy and company.protection_data_policy and not company.cookies_policy %}
+                            {% if company.privacy_policy and company.protection_data_policy and not company.terms_and_conditions %}
                             Acepto las
                             <a target="_blank" href="{{company.privacy_policy.url}}">Políticas de Privacidad</a>
                             y <a target="_blank" href="{{company.protection_data_policy.url}}">Protección de Datos Personales</a>
                             {% endif %}
-                            {% if company.privacy_policy and not company.protection_data_policy and company.cookies_policy %}
+                            {% if company.privacy_policy and not company.protection_data_policy and company.terms_and_conditions %}
                             Acepto las
                             <a target="_blank" href="{{company.privacy_policy.url}}">Políticas de Privacidad</a>
-                            y <a target="_blank" href="{{company.cookies_policy.url}}">Cookies.</a>
+                            y <a target="_blank" href="{{company.terms_and_conditions.url}}">Términos y Condiciones.</a>
                             {% endif %}
-                            {% if company.privacy_policy and company.protection_data_policy and company.cookies_policy %}
+                            {% if company.privacy_policy and company.protection_data_policy and company.terms_and_conditions %}
                             Acepto las
                             <a target="_blank" href="{{company.privacy_policy.url}}">Políticas de Privacidad</a>
                             , <a target="_blank" href="{{company.protection_data_policy.url}}">Protección de Datos Personales</a>
-                            y <a target="_blank" href="{{company.cookies_policy.url}}">Cookies.</a>
+                            y <a target="_blank" href="{{company.terms_and_conditions.url}}">Términos y Condiciones.</a>
                             {% endif %}
-                            {% if not company.privacy_policy and company.protection_data_policy and not company.cookies_policy %}
+                            {% if not company.privacy_policy and company.protection_data_policy and not company.terms_and_conditions %}
                             Acepto la
                             <a target="_blank" href="{{company.protection_data_policy.url}}">Protección de Datos Personales</a>
                             {% endif %}
-                            {% if not company.privacy_policy and company.protection_data_policy and company.cookies_policy %}
+                            {% if not company.privacy_policy and company.protection_data_policy and company.terms_and_conditions %}
                             Acepto la
                             <a target="_blank" href="{{company.protection_data_policy.url}}">Protección de Datos Personales</a>
-                            y <a target="_blank" href="{{company.cookies_policy.url}}">Cookies.</a>
+                            y <a target="_blank" href="{{company.terms_and_conditions.url}}">Términos y Condiciones.</a>
                             {% endif %}
-                            {% if not company.privacy_policy and not company.protection_data_policy and company.cookies_policy %}
-                            Acepto las
-                            <a target="_blank" href="{{company.cookies_policy.url}}">Cookies.</a>
+                            {% if not company.privacy_policy and not company.protection_data_policy and company.terms_and_conditions %}
+                            Acepto los
+                            <a target="_blank" href="{{company.terms_and_conditions.url}}">Términos y Condiciones.</a>
                             {% endif %}
                         </label>
 				    </div>
                 {% endif %}
-                {% if company.terms_and_conditions %}
-                    <div class="g8Checkbox">
-                        <input id="check2" type="checkbox" checked class="validate[required]" name="checkbox2" value="checkbox2">
-                        <label for="check2">Acepto los <a target="_blank" href="{{company.terms_and_conditions.url}}">Términos y Condiciones.</a></a></label>
-                    </div>
+                {% if company.cookies_policy %}
+                    <p>Conoce nuestra política de <a target="_blank" href="{{company.cookies_policy.url}}">Cookies.</a></p>
                 {% endif %}
 				<button class="g8SumitRegistro save-register">Enviar</button>
                 <h4>Ya tengo una cuenta <a href="#" id="openIniciaSesion">Inicial sesión</a></h4>
