--- a/src/templates/landing/common/_header.html
+++ b/src/templates/landing/common/_header.html
@@ -238,7 +238,7 @@
 				    </div>
                 {% endif %}
                 {% if company.cookies_policy %}
-                    <p>Conoce nuestra política de <a target="_blank" href="{{company.cookies_policy.url}}">Cookies.</a></p>
+                    <a href="{{company.cookies_policy.url}}" target="_blank" class="g8Cookies">Conoce nuestra política de Cookies</a>
                 {% endif %}
 				<button class="g8SumitRegistro save-register">Enviar</button>
                 <h4>Ya tengo una cuenta <a href="#" id="openIniciaSesion">Inicial sesión</a></h4>
